--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -166,12 +166,12 @@
     "web3": "1.7.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-proposal-export-default-from": "7.22.17",
-    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
-    "@babel/preset-env": "7.22.6",
-    "@babel/runtime": "7.22.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-proposal-export-default-from": "7.24.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.24.7",
+    "@babel/preset-env": "7.24.7",
+    "@babel/runtime": "7.24.7",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.7",
     "@testing-library/react-hooks": "^8.0.1",
@@ -183,13 +183,13 @@
     "@types/webpack": "5.28.1",
     "appcenter-cli": "2.13.9",
     "babel-jest": "29.6.1",
-    "babel-plugin-module-resolver": "5.0.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "cross-env": "=5.2.0",
     "detox": "^19.7.1",
     "eslint": "^8.19.0",
     "get-yarn-workspaces": "^1.0.2",
     "jest": "29.6.1",
-    "metro-react-native-babel-preset": "0.76.5",
+    "metro-react-native-babel-preset": "0.77.0",
     "mobx-react-lite": "3.4.0",
     "pod-install": "0.1.38",
     "prettier": "^2.4.1",
@@ -198,10 +198,8 @@
     "typescript": "4.8.4",
     "webpack": "5.88.1",
     "webpack-cli": "5.1.4",
-    "ts-jest": "29.1.1"
-  },
-  "resolutions": {
-    "@babel/core": "7.22.6"
+    "ts-jest": "29.1.1",
+    "@babel/core": "7.24.7"
   },
   "engines": {
     "node": ">=16"
