--- a/packages/bitcoin/package.json
+++ b/packages/bitcoin/package.json
@@ -33,7 +33,7 @@
     "node-fetch": "^2",
     "process": "^0.11.10",
     "readable-stream": "^3.6.0",
-    "url-parse": "^1.4.7",
+    "url-parse": "1.5.10",
     "uuid": "^8.3.0",
     "wif": "^2.0.6",
     "websocket": "^1.0.34",
