--- a/package.json
+++ b/package.json
@@ -119,9 +119,6 @@
     "@ethersproject/constants": "=5.6.0",
     "@babel/traverse": "=7.22.6",
     "@sentry/core": "=7.80.0",
-    "@react-native-firebase/app": "=18.6.1",
-    "@react-native-firebase/crashlytics": "=18.6.1",
-    "@react-native-firebase/messaging": "=18.6.1",
     "@sentry/replay": "=7.80.0",
     "@sentry/types": "=7.80.0",
     "@sentry/utils": "=7.80.0",
@@ -131,8 +128,7 @@
     "@sentry/cli": "=2.21.3",
     "@sentry/integrations": "=7.80.0",
     "@sentry-internal/tracing": "=7.80.0",
-    "@sentry/hub": "=7.80.0",
-    "@sentry/react-native": "=5.13.0"
+    "@sentry/hub": "=7.80.0"
   },
   "browser": {
     "assert": false
