--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -1,13 +1,12 @@
-apply plugin: 'com.android.application'
+apply plugin: "com.android.application"
+apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services' // <- Add this line
-apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.facebook.react'
 apply from: '../../node_modules/react-native-code-push/android/codepush.gradle'
+apply from: '../../node_modules/@sentry/react-native/sentry.gradle'
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
-
 react {
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '..'
@@ -38,7 +37,7 @@ react {
     //   The name of the generated asset file containing your JS bundle
     // bundleAssetName = "MyApplication.android.bundle"
     //
-    //   The entry file for bundle generation. Default is 'index.android.js' or 'index.ts'
+    //   The entry file for bundle generation. Default is 'index.android.js' or 'index.js'
     // entryFile = file("../js/MyApplication.android.js")
     //
     //   A list of extra flags to pass to the 'bundle' commands.
@@ -46,11 +45,11 @@ react {
     // extraPackagerArgs = []
 
     /* Hermes Commands */
-//   The hermes compiler command to run. By default it is 'hermesc'
-// hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
-//
-//   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
-// hermesFlags = ["-O", "-output-source-map"]
+    //   The hermes compiler command to run. By default it is 'hermesc'
+    // hermesCommand = "$rootDir/my-custom-hermesc/bin/hermesc"
+    //
+    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
+    // hermesFlags = ["-O", "-output-source-map"]
 }
 
 /**
@@ -71,19 +70,18 @@ def enableProguardInReleaseBuilds = false
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
-apply from: '../../node_modules/@sentry/react-native/sentry.gradle'
 android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace 'com.io.owallet'
+    namespace "com.io.owallet"
     defaultConfig {
-        applicationId 'com.io.owallet'
+        applicationId "com.io.owallet"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 160
-        versionName '3.1.2'
+        versionCode 167
+        versionName '3.1.3'
         missingDimensionStrategy 'react-native-camera', 'general' //
     }
     signingConfigs {
@@ -101,21 +99,16 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            // debuggable true
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            firebaseCrashlytics {
-                nativeSymbolUploadEnabled true
-                unstrippedNativeLibsDir 'build/intermediates/merged_native_libs/release/out/lib'
-            }
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 }
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation('com.facebook.react:react-android')
+    implementation("com.facebook.react:react-android")
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
@@ -124,10 +117,10 @@ dependencies {
 
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
     if (hermesEnabled.toBoolean()) {
-        implementation('com.facebook.react:hermes-android')
+        implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
     }
 }
 
-apply from: file('../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle'); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
