--- a/packages/mobile/android/build.gradle
+++ b/packages/mobile/android/build.gradle
@@ -2,38 +2,23 @@
 
 buildscript {
     ext {
-        buildToolsVersion = '33.0.0'
-        minSdkVersion = 23
-        compileSdkVersion = 33
-        targetSdkVersion = 33
-
+        buildToolsVersion = '34.0.0'
+        minSdkVersion = 24 // Handle error: Failed to transform play-services-measurement-api-21.6.2.aar 
+        compileSdkVersion = 34
+        targetSdkVersion = 34
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = '23.1.7779620'
-        androidXBrowser = '1.3.0'
-        androidXAnnotation = '1.2.0'
     }
     repositories {
         google()
         mavenCentral()
-        
     }
     dependencies {
         classpath('com.android.tools.build:gradle')
-        classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
         classpath('com.facebook.react:react-native-gradle-plugin')
-    }
-}
-subprojects { subproject ->
-        if (project['name'] == 'react-native-reanimated') {
-        project.configurations { compile { } }
-        }
-}
-allprojects {
-    repositories {
-        maven { url 'https://www.jitpack.io' }
-        maven { url 'https://maven.google.com' }
-        // Leave any existing entries in place, add the below entry as a new repository.
-        maven { url "https://storage.googleapis.com/logrocket-maven/" }
+        // NOTE: if you are on react-native 0.71 or below, you must not update
+        //       the google-services plugin past version 4.3.15 as it requires gradle >= 7.3.0
+        classpath 'com.google.gms:google-services:4.3.15'
+    // Add me --- /\
     }
 }
