--- a/packages/mobile/ios/mobile/Info.plist
+++ b/packages/mobile/ios/mobile/Info.plist
@@ -72,6 +72,12 @@
 		<string>SpaceGrotesk-Medium.ttf</string>
 		<string>SpaceGrotesk-Regular.ttf</string>
 		<string>SpaceGrotesk-SemiBold.ttf</string>
+		<string>DMSans-Bold.ttf</string>
+		<string>DMSans-BoldItalic.ttf</string>
+		<string>DMSans-Italic.ttf</string>
+		<string>DMSans-Medium.ttf</string>
+		<string>DMSans-MediumItalic.ttf</string>
+		<string>DMSans-Regular.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
