--- a/packages/mobile/.gitignore
+++ b/packages/mobile/.gitignore
@@ -94,7 +94,7 @@ injected-provider.bundle.js
 **/fastlane/test_output
 
 # Ruby / CocoaPods
-# /vendor/bundle/
+/vendor/bundle/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
