--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "@sentry/hub": "=7.80.0",
     "tronweb": "5.3.2",
     "secretjs": "1.12.5",
-    "axios": "1.7.2"
+    "axios": "1.7.2",
+    "web3": "4.11.0"
   },
   "browser": {
     "assert": false
