--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,8 @@
   "author": "chainapsis",
   "license": "Apache-2.0",
   "dependencies": {
-    "markdown-it": "12.3.2",
-    "markdown-it-container": "^3.0.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-container": "^4.0.0",
     "vuepress": "^1.9.10",
     "vuepress-theme-cosmos": "^1.0.184"
   }
