--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -126,7 +126,8 @@
     "react-native-webview": "^13.10.5",
     "secretjs": "^1.12.5",
     "stream-browserify": "^3.0.0",
-    "string_decoder": "^1.3.0"
+    "string_decoder": "^1.3.0",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -152,7 +153,13 @@
     "ts-jest": "^29.2.2",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "react-native-svg-transformer": "^1.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-proposal-export-default-from": "^7.24.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.24.7",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "engines": {
     "node": ">=16"
