--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
     "tronweb": "5.3.2",
     "secretjs": "1.12.5",
     "axios": "1.7.2",
-    "web3": "4.11.0"
+    "web3": "4.11.0",
+    "axios-extensions":"3.1.7"
   },
   "browser": {
     "assert": false
