--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -38,8 +38,8 @@
     "@owallet/stores": "^0.9.16",
     "@owallet/types": "^0.9.12",
     "@owallet/unit": "^0.9.12",
-    "@sentry/react": "=7.80.0",
-    "@sentry/tracing": "=7.80.0",
+    "@sentry/react": "^8.17.0",
+    "@sentry/tracing": "^7.114.0",
     "ethers": "^6.13.1",
     "@tatumio/tatum": "^4.2.32",
     "@walletconnect/client": "^1.8.0",
