--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -2,6 +2,11 @@
   "name": "mobile",
   "version": "0.0.1",
   "private": true,
+  "workspaces": {
+    "nohoist": [
+      "mobx-react-lite"
+    ]
+  },
   "scripts": {
     "clean": "rimraf ios/Podfile.lock",
     "android": "react-native run-android",
@@ -59,7 +64,7 @@
     "chain-registry": "^1.63.26",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.0",
-    "ethers": "^6.13.1",
+    "ethers": "^5.7.2",
     "fetch-retry": "^6.0.0",
     "get-yarn-workspaces": "^1.0.2",
     "graphql": "^16.9.0",
@@ -75,7 +80,6 @@
     "mixpanel-react-native": "^3.0.5",
     "mobx": "^6.13.0",
     "mobx-persist": "^0.4.1",
-    "mobx-react-lite": "^4.0.7",
     "mobx-utils": "^6.0.8",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -127,7 +131,11 @@
     "secretjs": "^1.12.5",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
-    "text-encoding": "^0.7.0"
+    "text-encoding": "^0.7.0",
+    "web3": "^1.10.4",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -159,7 +167,8 @@
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-proposal-export-default-from": "^7.24.7",
     "@babel/plugin-transform-flow-strip-types": "^7.24.7",
-    "babel-plugin-module-resolver": "^5.0.2"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "mobx-react-lite": "^4.0.7"
   },
   "engines": {
     "node": ">=16"
